Day3/manifests/myapp-sb-service.yaml
apiVersion: v1
kind: Service

metadata:
 name: myapp-sb-service-by-kumar

spec:
 selector:
  app: myapp-sb

 ports:
    - protocol: TCP
      port: 9090
      targetPort: 8080
 type: NodePort
 #type: LoadBalancer 
 #type: ExternalDNS
